# sentiment-allocine-nlp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  deployment_config.json  pyproject.toml  requirements.txt  requirements_app.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: model_manager.py  streamlit_app.py  utils.py
configs/: config.yaml
data/raw/: dataset_stats.json
models/baseline/: best_model_config.json
models/transformers/: transformer_registry.json
models/transformers/camembert-base/: config.json  threshold.json  threshold_analysis.parquet
notebooks/: 01_eda_exploration.ipynb  02_preprocessing_pipeline.ipynb  03_baseline_models.ipynb  04_transformer_finetuning.ipynb  05_evaluation_analysis.ipynb
reports/metrics/: all_models_config.json  baseline_comparison.json  baseline_comparison_final.csv  baseline_report.json  benchmark_final.csv  eda_summary.json
src/data/: dataset_utils.py  download_dataset.py  preprocess.py
src/utils/: config_loader.py  logger.py
